[package]
name = "envmapgen"
version = "0.1.0"
authors = ["ARcane Developers"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.15.0"
lazy_static = "1.0.0"
smallvec = "0.5.0"
arcane_gfx = { path = "../arcane_gfx" }

[dependencies.hyperenvmap]
git = "https://github.com/Hyper3D/hyper3d-envmapgen"
rev = "25cc54846aafdd55a8d86429d7d51f7f948ee0fe"
